--- a/alineando-contenido/index.html
+++ b/alineando-contenido/index.html
@@ -13,6 +13,7 @@
       height: 100vh;
       grid-template-columns: repeat(3, 200px);
       grid-template-rows: repeat(4, 100px);
+      /* justify-content: start center end space-between space-around space-evenly; */
       justify-content: space-between;
       align-content: space-between;
     }
